--- a/APPVIEW/Views/Account/MyProfile.cshtml
+++ b/APPVIEW/Views/Account/MyProfile.cshtml
@@ -8,7 +8,6 @@
     string Id_userValue = IdUser?.Value;
 
 }
-```html
 <section class="blog-banner-area" id="category">
     <div class="container h-100">
         <div class="blog-banner">
@@ -36,7 +35,12 @@
                 <span class="text-black-50">@Model.Email</span>
             </div>
         </div>
+        <style>
 
+            .nice-select .list{
+                width: 300px;
+            }
+        </style>
         <div class="col-md-8">
             <div class="p-3 py-5">
                 <h4 class="text-right mb-4">Hồ sơ của Tôi</h4>
