--- a/APPVIEW/Views/Bill/GetList.cshtml
+++ b/APPVIEW/Views/Bill/GetList.cshtml
@@ -123,9 +123,13 @@
                     }
                     else if (item.Status == 4)
                     {
-                        <span>Đã nhận hàng </span>
+                        <span>Đã nhận hàng và thanh toán </span>
                     }
-           
+                    else if (item.Status == 0)
+                    {
+                        <span>Chờ hủy </span>
+                    }
+
 
             </td>
           
