--- a/APPVIEW/Views/Bill/GetList2.cshtml
+++ b/APPVIEW/Views/Bill/GetList2.cshtml
@@ -9,17 +9,41 @@
 
 
 
-<form asp-action="GetList2" class="row contact_form" method="post">
-    <div class="row">
-        <div class="col-md-3 form-group">
-            <input type="text" id="searchTerm" class="form-control" name="searchTerm" placeholder="Nhập mã hóa đơn để tìm kiếm">
+<div class="row">
 
-        </div>    <div class="col-md-2 form-group">
+
+
+    <form asp-action="GetList2" class="row contact_form" method="post" style="margin-bottom:20px">
+        <div class="col-md-2 form-group">
+            <input style="300px" type="text" id="searchTerm" class="form-control" name="searchTerm" placeholder="Nhập mã hóa đơn để tìm kiếm">
+
+
+
+        </div>
+        <div class="col-md-2 form-group">
             <button type="submit" class="btn btn-success">Shearch</button>
 
         </div>
-    </div>
-</form>
+        <div class="col-md-2 form-group">
+            <input style="300px" type="date" id="searchTerm" class="form-control" name="start">
+
+
+        </div> <div class="col-md-2 form-group">
+            <input style="300px" type="date" id="searchTerm" class="form-control" name="end">
+
+        </div>
+        <div class="col-md-1 form-group">
+            <button type="submit" class="btn btn-success">Lọc</button>
+        </div>
+    </form>
+
+
+
+</div>
+
+
+
+
 <table class="table">
     <thead>
         <tr>
@@ -31,7 +55,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Code)
             </th>
-     
+
             <th>
                 @Html.DisplayNameFor(model => model.TotalMoney)
             </th>
@@ -74,7 +98,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Code)
                 </td>
-          
+
                 <td>
                     @Html.DisplayFor(modelItem => item.TotalMoney)
                 </td>
@@ -110,7 +134,10 @@
                     {
                         <span>Đã Thanh Toán </span>
                     }
-
+                    else if (item.Status == 0)
+                    {
+                        <span>Chờ hủy </span>
+                    }
 
                 </td>
 
